--- a/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
+++ b/notebooks/6 - preproces NEMO-MEDUSA projections.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,119 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2000_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2001_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2002_grid_T.nc\n",
-      "<ipython-input-47-8fb88433f813>:15: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
-      "  time_units = nctime.units\n",
-      "<ipython-input-47-8fb88433f813>:16: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  z = nc[depth_name][:]\n",
-      "<ipython-input-47-8fb88433f813>:17: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
-      "  assert time_units == nctime.units, 'Time units mismatch: %s vs %s' % (time_units, nctime.units)\n",
-      "<ipython-input-47-8fb88433f813>:18: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  numtime = nctime[:]\n",
-      "<ipython-input-47-8fb88433f813>:19: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  data.setdefault('votemper', []).append(nc['votemper'][:, :, 0, 0])\n",
-      "<ipython-input-47-8fb88433f813>:23: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
-      "  assert time_units == nctime.units, 'Time units mismatch between grid and ptrc: %s vs %s' % (time_units, nctime.units)\n",
-      "<ipython-input-47-8fb88433f813>:25: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  assert (numtime == nctime[:]).all(), 'Time value mismatch between grid and ptrc: %s vs %s' % (numtime, nctime[:])\n",
-      "<ipython-input-47-8fb88433f813>:26: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  data.setdefault('PHN', []).append(nc['PHN'][:, :, 0, 0])\n",
-      "<ipython-input-47-8fb88433f813>:27: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  data.setdefault('PHD', []).append(nc['PHD'][:, :, 0, 0])\n",
-      "<ipython-input-47-8fb88433f813>:28: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  data.setdefault('ZMI', []).append(nc['ZMI'][:, :, 0, 0])\n",
-      "<ipython-input-47-8fb88433f813>:29: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  data.setdefault('ZME', []).append(nc['ZME'][:, :, 0, 0])\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2003_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2004_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2005_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2006_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2007_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2008_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2009_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2010_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2011_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2012_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2013_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2014_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2015_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2016_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2017_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2018_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2019_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2020_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2021_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2022_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2023_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2024_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2025_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2026_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2027_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2028_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2029_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2030_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2031_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2032_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2033_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2034_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2035_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2036_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2037_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2038_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2039_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2040_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2041_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2042_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2043_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2044_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2045_grid_T.nc\n",
-      "../datasets/NEMO-MEDUSA-projections/eqpac\\eqpac_ORCA025-ROAM_5d_2046_grid_T.nc\n",
-      "<ipython-input-50-151e8003c505>:4: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  Ptot = ncin['PHN'][:,:] + ncin['PHD'][:,:] + ncin['ZMI'][:,:] + ncin['ZME'][:,:]\n",
-      "<ipython-input-50-151e8003c505>:5: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  h = ncin['h'][:]\n",
-      "<ipython-input-50-151e8003c505>:12: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
-      "  nctime_out.units = nctime_in.units\n",
-      "<ipython-input-50-151e8003c505>:13: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  nctime_out[:] = nctime_in[:]\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'createVariable' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-47a0130b5d63>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcombine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../datasets/NEMO-MEDUSA-projections/eqpac'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'../datasets/NEMO-MEDUSA-projections/eqpac.nc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlast_year\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2046\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdepth_average\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../datasets/NEMO-MEDUSA-projections/eqpac.nc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'../datasets/NEMO-MEDUSA-projections/eqpac_da.nc'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-50-151e8003c505>\u001b[0m in \u001b[0;36mdepth_average\u001b[1;34m(path_in, path_out)\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mnctime_out\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnctime_in\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munits\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mnctime_out\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnctime_in\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mcreateVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'w_int'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw_int\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtime_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw_int\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mcreateVariable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'w2_int'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw2_int\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtime_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw2_int\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'votemper'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PHN'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PHD'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ZMI'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ZME'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'createVariable' is not defined"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
    "source": [
-    "combine('../datasets/NEMO-MEDUSA-projections/eqpac', '../datasets/NEMO-MEDUSA-projections/eqpac.nc', last_year=2046)\n",
-    "depth_average('../datasets/NEMO-MEDUSA-projections/eqpac.nc', '../datasets/NEMO-MEDUSA-projections/eqpac_da.nc')"
+    "for path in glob.glob('../datasets/NEMO-MEDUSA-projections/*'):\n",
+    "    if os.path.isdir(path):\n",
+    "        combine(path, path + '.nc', last_year=2046)\n",
+    "        depth_average(path + '.nc', path + '_da.nc')"
    ]
   },
   {
